@@ -2,6 +2,7 @@ Version 0.17.1
   Added eventIdentityShowVariables to EventsListByNode
   replaced requestAllEventsByIndex with requestAllEventsByNENRD
   Commented out 'saved indexes' from EventsListByNode
+  Updated AddEventDialog
 
 Version 0.17.0
   Added node_useSwitchTeach2
